<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical">

    <com.zhibaowang.component.ZEditText
        android:id="@+id/edittext_username_login"
        style="@style/textview_login_register"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="31dp"
        android:layout_marginTop="35dp"
        android:hint="@string/string_username_hint"
        app:icon_src_normal="@drawable/mobile_phone_icon" />

    <com.zhibaowang.component.ZEditText
        android:id="@+id/edittext_password"
        style="@style/textview_login_register"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="31dp"
        android:hint="@string/string_password_hint"
        android:inputType="textPassword"
        app:icon_src_normal="@drawable/password_phone_icon" />

    <Button
        android:id="@+id/button_login"
        style="@style/style_button_signin"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/string_sign_in_button" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="7dp">

        <TextView
            android:id="@+id/textview_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:autoLink="all"
            android:text="@string/string_forget_password"
            android:textColor="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary" />
    </FrameLayout>
</LinearLayout>
