<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical">

    <com.zhibaowang.component.ZEditText
        android:id="@+id/edittext_username_register"
        style="@style/textview_login_register"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="31dp"
        android:layout_marginTop="35dp"
        android:hint="@string/string_please_input_phone_number"
        app:icon_src_normal="@drawable/mobile_phone_icon" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="31dp">

        <com.zhibaowang.component.ZEditText
            android:id="@+id/edittext_authcode"
            style="@style/textview_login_register"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginRight="109dp"
            android:hint="@string/string_please_input_authcode"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/button_authcode"
            style="@style/style_button_authcode"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:text="@string/string_auth"
            android:textColor="#2fb261"
            android:textSize="15sp" />
    </FrameLayout>


    <Button
        android:id="@+id/button_register"
        style="@style/style_button_signin"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/string_sign_in_button" />


</LinearLayout>
