<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:test="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="76"/>
    <com.zhibaowang.component.ZEditText

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="170"
        app:textsize_myhint="15sp"
        app:myhint="@string/string_message_uploadbill"
        style="@style/style_textview_upload"
        android:gravity="start"
        android:padding="10dp"
        app:corner_radius="3dp"
        app:textcolor_myhint="@color/color_border"
        app:border_color_normal="@color/color_border"
        app:border_width_normal="2px"
        app:border_dash_width="0px"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"/>
    <com.zhibaowang.component.ZButton
        android:text="@string/string_choose_file"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="76"
        style="@style/style_button_upload"
        test:img_center_choose="@drawable/select_file"
        test:img_center="@drawable/select_file"
        test:text_center="选择文件"/>/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"/>
    <com.zhibaowang.component.ZButton
        android:text="@string/string_choose_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="76"
        style="@style/style_button_upload"
        test:img_center_choose="@drawable/choose_picture"
        test:img_center="@drawable/choose_picture"
        test:text_center="选择图片"/>
    <TextView
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:text="@string/string_or"
        android:layout_height="0dp"
        android:layout_weight="136"
        android:textColor="@color/color_border"/>
    <com.zhibaowang.component.ZButton
        android:text="@string/string_choose_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="76"
        style="@style/style_button_upload"
        test:img_center_choose="@drawable/taobao_picture"
        test:img_center="@drawable/taobao_picture"
        test:text_center="淘宝店铺"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"/>
    <com.zhibaowang.component.ZButton
        android:text="@string/string_choose_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="76"
        style="@style/style_button_upload"
        test:img_center_choose="@drawable/tmal_picture"
        test:img_center="@drawable/tmal_picture"
        test:text_center="天猫店铺"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"/>
    <com.zhibaowang.component.ZButton
        android:text="@string/string_choose_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="76"
        style="@style/style_button_upload"
        test:img_center_choose="@drawable/jd_picture"
        test:img_center="@drawable/jd_picture"
        test:text_center="京东商城"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"/>
    <com.zhibaowang.component.ZButton
        android:text="@string/string_choose_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="76"
        style="@style/style_button_upload"
        test:img_center_choose="@drawable/suning_picture"
        test:img_center="@drawable/suning_picture"
        test:text_center="苏宁易购"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"/>


</LinearLayout>
