<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="com.zhibaowang.ui.PasswordActivity">

    <ImageView
        android:id="@+id/back_resetpassword"
        android:layout_width="33dp"
        android:layout_height="21dp"
        android:layout_gravity="left|top"
        android:background="@drawable/arrow"
        android:onClick="onBackClick" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="21dp">

        <com.zhibaowang.component.ZEditText
            android:id="@+id/edittext_password_changepassword"
            style="@style/textview_login_register"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="31dp"
            android:layout_marginTop="35dp"
            android:hint="输入新密码"
            android:paddingLeft="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="31dp">

            <com.zhibaowang.component.ZEditText
                android:id="@+id/edittext_authcode_changepassword"
                style="@style/textview_login_register"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="109dp"
                android:hint="@string/string_please_input_authcode"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/button_authcode_changepassword"
                style="@style/style_button_authcode"
                android:layout_width="98dp"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:text="@string/string_auth"
                android:textColor="#2fb261"
                android:textSize="15sp" />
        </FrameLayout>

        <Button
            android:id="@+id/button_resetpassword"
            style="@style/style_button_signin"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/string_confirmchangingpassword" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/resetpassword_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone">

        <ProgressBar
            style="@style/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</FrameLayout>
