<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:test="http://schemas.android.com/apk/res-auto"
    xmlns:test2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="com.zhibaowang.ui.UserCenterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="top"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/back_login"
            android:layout_width="33dp"
            android:layout_height="21dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:background="@drawable/arrow"
            android:onClick="onBackClick" />
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:text="@string/string_gerenzhongxin"
            android:textSize="20sp"
            android:textColor="@color/mainthemecolor"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="3dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/mainthemecolor2"
            android:onClick="goToUserPage">
            <com.zhibaowang.component.ZButton
                android:layout_width="67dp"
                android:layout_height="53dp"
                test:percent_bitmap_center="1.2"
                test:img_center="@drawable/usericon"
                android:layout_gravity="center_vertical|left"
                android:onClick="goToUserPage"
                android:layout_marginLeft="13dp"
                test:w_border="1dp"
                test:color_border="@color/white"/>
           <com.zhibaowang.component.ZButton
               android:layout_width="200dp"
               android:layout_height="20dp"
               test:text_left="昵称"
               test:textsize="20sp"
               android:layout_gravity="left|top"
               android:layout_marginLeft="83dp"
               android:layout_marginTop="13dp"
               android:padding="0dp"
               android:gravity="center"
               android:onClick="goToUserPage"
               test:textcolor="@color/white"/>
            <com.zhibaowang.component.ZButton
                android:layout_width="200dp"
                android:layout_height="20dp"
                test:text_left="@string/stirng_xiangxixinxi"
                test:textsize="15sp"
                android:layout_gravity="left|top"
                android:layout_marginLeft="83dp"
                android:layout_marginTop="33dp"
                android:padding="0dp"
                android:gravity="center"
                android:onClick="goToUserPage"
                test:textcolor="@color/darkwhite"/>
           <com.zhibaowang.component.ZButton
               android:layout_gravity="center_vertical|right"
               android:layout_width="50dp"
               android:layout_height="80dp"
               test:percent_bitmap_center="0.31"
               android:onClick="goToUserPage"
               test:img_center="@drawable/big_arrow"/>
        </FrameLayout>

        <com.zhibaowang.component.ZButton
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            test:img_left="@drawable/credit_score"
            test:img_right="@drawable/arrow_icon"
            test:text_left="@string/string_anywords"
            test:text_right="@string/string_anywords"
            style="@style/style_button_userpage"
            />
        <com.zhibaowang.component.ZButton
            android:layout_width="match_parent"
            android:layout_height="35dp"
            test:img_left="@drawable/my_wallet"
            test:img_right="@drawable/arrow_icon"
            test:text_left="@string/string_anywords"
            test:text_right="@string/string_anywords"
            style="@style/style_button_userpage"
            />
        <com.zhibaowang.component.ZButton
            android:layout_width="match_parent"
            android:layout_height="35dp"
            test:img_left="@drawable/gift_activities"
            test:img_right="@drawable/arrow_icon"
            test:text_left="@string/string_anywords"
            test:text_right="@string/string_anywords"
            style="@style/style_button_userpage"
            />
        <com.zhibaowang.component.ZButton
            android:layout_width="match_parent"
            android:layout_height="35dp"
            test:img_left="@drawable/my_collection"
            test:img_right="@drawable/arrow_icon"
            test:text_left="@string/string_anywords"
            test:text_right="@string/string_anywords"
            style="@style/style_button_userpage"
            />

        <com.zhibaowang.component.ZButton
            android:id="@+id/button_sharethisapptomyfriend"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            test:img_left="@drawable/use_guide"
            test:img_right="@drawable/arrow_icon"
            test:text_left="向好友推荐此应用"
            style="@style/style_button_userpage"
            />

    </LinearLayout>


</FrameLayout>
